<resources>
    <string name="app_name">Android Layouts</string>
    <string name="todo">TODO</string>
    <string name="starbucks">Starbucks</string>
    <string name="back">Back</string>
    <string name="lrem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="offer">offer :</string>
    <string name="website">Website: http//</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Receive Messages</string>
    <string name="submit">Submit</string>
    <string name="scroll">scroll</string>
    <string name="starbucks_logo">Starbucks Logo</string>
    <string name="back_buttn">Back</string>
    <string name="team">Team Image</string>
    <string name="epl">EPL\n</string>
    <string name="name">Enter Your Name</string>
    <string name="age">Enter Your Age</string>
    <string-array name="countries">
        <item>India</item>
        <item>Pakistan</item>
        <item>Bangladesh</item>
        <item>Sri Lanka</item>
        <item>Nepal</item>
        <item>Australia</item>
        <item>Newzealand</item>
        <item>Germany</item>
        <item>Sweden</item>
        <item>England</item>
        <item>USA</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_service">Start Service</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="stop_service">Stop Service</string>
</resources>